test: add bats regression tests and CI matrix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ permissions:
   contents: read
 
 jobs:
-  shell:
+  shellcheck:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -17,10 +17,39 @@ jobs:
       - name: Bash syntax check
         run: |
           bash -n bin/codeman
+          bash -n install.sh
 
       - name: ShellCheck (best-effort)
         run: |
           sudo apt-get update
           sudo apt-get install -y shellcheck
-          shellcheck -x bin/codeman
+          shellcheck -x bin/codeman install.sh
 
+  bats:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install bats
+        run: |
+          if [ "${RUNNER_OS}" = "Linux" ]; then
+            sudo apt-get update
+            sudo apt-get install -y bats
+          elif [ "${RUNNER_OS}" = "macOS" ]; then
+            brew install bats-core
+          else
+            echo "Unsupported OS: ${RUNNER_OS}" >&2
+            exit 2
+          fi
+
+      - name: Show bash version
+        run: |
+          bash --version | head -n 1
+
+      - name: Run bats tests
+        run: |
+          bats -r tests
